<resources>
    <string name="app_name">Candle</string>
    <string name="app_description">Real-time stock market watcher</string>

    <string name="quote_change_pos">+%1$.2f</string>
    <string name="quote_change_neg">%1$.2f</string>

    <string name="quote_change_percent_pos">+%1$.2f%%</string>
    <string name="quote_change_percent_neg">%1$.2f%%</string>

    <string name="overview_fragment_title">Overview</string>
    <string name="watchlist_fragment_title">Watchlist</string>
    <string name="preferences_fragment_title">Preferences</string>
    <string name="about_fragment_title">About</string>

    <string name="quote_type_equity">Equity</string>
    <string name="quote_type_etf">ETF</string>
    <string name="quote_type_currency">Currency</string>

    <string name="search_hint">Search</string>

    <string name="chart_label_years">YYYY</string>
    <string name="chart_label_days">MM/dd</string>
    <string name="chart_label_hours">hh:mm</string>

    <string name="quote_details_open">Open</string>
    <string name="quote_details_day_range">Day\'s Range</string>
    <string name="quote_details_ftw_range">52 Week Range</string>
    <string name="quote_details_volume">Volume</string>
    <string name="quote_details_market_cap">Market Cap</string>
    <string name="quote_details_pe_ratio">PE Ratio</string>
    <string name="quote_details_earnings_date">Earnings Date</string>
    <string name="quote_details_dividend_rate">Dividend Rate</string>
    <string name="quote_details_dividend_date">Dividend Date</string>

    <string name="date_format_long">MMM dd, yyyy</string>

    <string name="number_format_thousands">%1$.2fK</string>
    <string name="number_format_millions">%1$.2fM</string>
    <string name="number_format_billions">%1$.2fB</string>
    <string name="number_format_trillions">%1$.2fT</string>

    <string name="chart_period_day_1">1D</string>
    <string name="chart_period_week_2">2W</string>
    <string name="chart_period_month_1">1M</string>
    <string name="chart_period_ytd">YTD</string>
    <string name="chart_period_year_1">1Y</string>
    <string name="chart_period_max">MAX</string>

    <string name="chart_no_data">No chart data available</string>

    <string name="quote_card_transition_name" translatable="false">quote_card_%1$s</string>
    <string name="quote_card_detail_transition_name" translatable="false">quote_card_detail</string>

    <string name="preferences_section_ui">UI</string>
    <string name="preferences_section_misc">Misc.</string>

    <string name="preference_night_mode">Theme</string>
    <string name="preference_night_mode_light">Light Theme</string>
    <string name="preference_night_mode_dark">Dark Theme</string>
    <string name="preference_night_mode_system">Follow System</string>

    <string name="preference_about">About</string>

    <string name="about_section_credits">Credits</string>
    <string name="about_section_libraries">Libraries</string>
    <string name="about_section_contributors">Contributors</string>

    <string name="dialog_night_mode_title">Theme</string>

    <string name="dialog_credit_show_website">Show Website</string>
    <string name="dialog_credit_show_license">Show License</string>

    <string name="network_retry_message">Something went wrong</string>
    <string name="network_retry_action">Retry</string>

    <string name="contributor_sguinetti_description">Spanish translation</string>
</resources>
