<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/search_card"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/search_bar_action_margin"
                android:background="?selectableItemBackgroundBorderless"
                app:tint="?colorPrimary"
                android:src="@drawable/ic_arrow_back"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintEnd_toStartOf="@id/clear"
                app:cardCornerRadius="@dimen/search_bar_radius"
                android:layout_marginVertical="@dimen/search_bar_margin_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="textCapCharacters"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:hint="@string/search_hint"/>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/search_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/search_bar_action_margin"
                android:background="?selectableItemBackgroundBorderless"
                app:tint="?colorPrimary"
                android:src="@drawable/ic_close"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"/>

    <com.cosmos.candelabra.ui.common.InfoBarView
        android:id="@+id/info_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_marginTop="@dimen/info_bar_margin_top"
        style="@style/Widget.InfoBar"
        app:textMessage="@string/network_retry_message"
        app:textAction="@string/network_retry_action"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>